<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Aura</string>

    <string name="N_A">N/A</string>
    <string name="close">Close</string>
    <string name="exit">Exit</string>
    <string name="sample">Sample</string>
    <string name="files">Files</string>
    <string name="recent">Recent</string>
    <string name="settings">Settings</string>
    <string name="tracks">Tracks</string>
    <string name="playlist">Playlist</string>
    <string name="toggle_player">Player</string>
    <string name="toggle_render">Render</string>
    <string name="toggle_ratio">Scale</string>
    <string name="show_info">Info</string>
    <string name="vdec">vdec</string>
    <string name="fps">fps</string>
    <string name="v_cache">v-cache</string>
    <string name="a_cache">a-cache</string>
    <string name="load_cost">load-cost</string>
    <string name="seek_cost">seek_cost</string>
    <string name="seek_load_cost">seek_load_cost</string>
    <string name="tcp_speed">tcp_speed</string>
    <string name="bit_rate">bit_rate</string>

    <string name="media_information">Media Information</string>
    <string name="mi_player">Player</string>
    <string name="mi_media">Media</string>
    <string name="mi_profile_level">Profile level</string>
    <string name="mi_pixel_format">Pixel format</string>
    <string name="mi_resolution">Resolution</string>
    <string name="mi_length">Length</string>
    <string name="mi_stream_fmt1">Stream #%d</string>
    <string name="mi_type">Type</string>
    <string name="mi_language">Language</string>
    <string name="mi_codec">Codec</string>
    <string name="mi_frame_rate">Frame rate</string>
    <string name="mi_bit_rate">Bit rate</string>
    <string name="mi_sample_rate">Sample rate</string>
    <string name="mi_channels">Channels</string>
    <string name="mi__selected_video_track">*</string>
    <string name="mi__selected_audio_track">*</string>
    <string name="mi__selected_subtitle_track">*</string>

    <string name="TrackType_video">Video</string>
    <string name="TrackType_audio">Audio</string>
    <string name="TrackType_subtitle">Subtitle</string>
    <string name="TrackType_timedtext">Timed text</string>
    <string name="TrackType_metadata">Meta data</string>
    <string name="TrackType_unknown">Unknown</string>

    <string name="VideoView_error_text_invalid_progressive_playback">Invalid progressive playback</string>
    <string name="VideoView_error_text_unknown">Unknown</string>
    <string name="VideoView_error_button">OK</string>

    <string name="VideoView_ar_aspect_fit_parent">Aspect / Fit parent</string>
    <string name="VideoView_ar_aspect_fill_parent">Aspect / Fill parent</string>
    <string name="VideoView_ar_aspect_wrap_content">Aspect / Wrap content</string>
    <string name="VideoView_ar_match_parent">Free / Fill parent</string>
    <string name="VideoView_ar_16_9_fit_parent">16:9 / Fit parent</string>
    <string name="VideoView_ar_4_3_fit_parent">4:3 / Fit parent</string>

    <string name="VideoView_render_none">Render: None</string>
    <string name="VideoView_render_surface_view">Render: SurfaceView</string>
    <string name="VideoView_render_texture_view">Render: TextureView</string>

    <string name="VideoView_player_none">Player: None</string>
    <string name="VideoView_player_AndroidMediaPlayer">Player: AndroidMediaPlayer</string>
    <string name="VideoView_player_IjkMediaPlayer">Player: IjkMediaPlayer</string>
    <string name="VideoView_player_IjkExoMediaPlayer">Player: IjkExoMediaPlayer</string>

    <string name="hud">HUD</string>
    <string name="audio_channel">Audio channel</string>
    <string name="audio_channel_stereo">Audio channel: stereo</string>
    <string name="audio_channel_left">Audio channel: left only</string>
    <string name="audio_channel_right">Audio channel: right only</string>
    <!-- 需要 IjkMediaPlayer 特有能力、但当前是系统播放器时的提示。设置页里
         这一项的真实标题是 "Choose Player"（General 分组内），别再写 "Player"。 -->
    <string name="need_ijk_player">Not supported by the current player. Choose Player &gt; IjkMediaPlayer in Settings &gt; General.</string>
    <string name="rotate_x">Rotate X +180 (flip)</string>
    <string name="rotate_y">Rotate Y +180 (flip)</string>
    <string name="rotate_z">Rotate Z +90</string>
    <string name="rotate_reset">Rotate reset</string>
    <string name="hud_on">HUD: on</string>
    <string name="hud_off">HUD: off</string>

    <string name="check_update">Check update</string>
    <string name="update_checking">Checking for update…</string>
    <string name="update_check_failed">Update check failed</string>
    <string name="update_none">You are up to date</string>
    <string name="update_found">Update available</string>
    <string name="update_available">New version %1$s (current %2$s)</string>
    <string name="update_download">Download</string>
    <string name="update_downloading">Downloading…</string>
    <string name="update_download_failed">Download failed</string>
    <string name="update_allow_unknown">Allow installing from this source, then try again</string>
</resources>
